--- a/public/index.html
+++ b/public/index.html
@@ -426,29 +426,31 @@
             <div id="help-separator-line-l" class="separator-line-l"> </div>
             <div id="help-separator-line-d" class="separator-line-d"> </div>
             <div>
-                <form class="mt-3 font-light" accept-charset="UTF-8" action="https://getform.io/f/d783e207-0716-4486-98df-feeddc5516f9" method="POST" enctype="multipart/form-data"  target="_blank" id="wpform">
-                    <p class="mt-3 text-2xl opacity-50 font-semibold">Contact / Feedback:</p>
+                <form class="mt-3 mb-6 font-light" accept-charset="UTF-8" action="https://getform.io/f/d783e207-0716-4486-98df-feeddc5516f9" method="POST" enctype="multipart/form-data"  target="_blank" id="wpform">
+                    <p class="mt-3 mb-2 text-2xl opacity-50 font-semibold">Contact / Feedback:</p>
                    <div>
-                      <label class="text-2xl opacity-50">Name:</label>
+                      <label class="form-text-md-2 opacity-40">Name:</label>
                       <div>
                          <input id="name-form" class="font-form mt-1 px-1 form-text-md font-light" size="38" type="text" name="first_name" placeholder="Enter your name" placeholder="" required="required">
                       </div>
                    </div>
                    <div class="mt-2">
-                      <label class="text-2xl opacity-50 font-light">Email address:</label>
+                      <label class="form-text-md-2 opacity-40 font-light">Email address:</label>
                       <div>
                          <input id="email-form" class="font-form mt-1 px-1 form-text-md font-light" size="38" type="email" name="email" placeholder="Enter your email" placeholder="" required="required">
                       </div>
                    </div>
                    <div class="mt-2">
-                      <label class="text-2xl opacity-50 font-light">Your Message:</label>
+                      <label class="form-text-md-2 opacity-40 font-light">Your Message:</label>
                       <div>
-                         <textarea id="message-form" class="font-form mt-1 form-text-md px-1 font-light" style="resize: none;" rows="4" cols="65" type="text" name="message" placeholder="Enter your message" required="required"></textarea>
+                         <textarea id="message-form" class="font-form mt-1 form-text-md px-1 font-light" style="resize: none;" rows="4" cols="62" type="text" name="message" placeholder="Enter your message" required="required"></textarea>
                       </div>
                    </div>
                    <input type="hidden" name="utf8" value="✓">
                    <button id="form-submit-btn" class="form-submit-slide-default form-submit-slide form-submit-left font-bold rounded transition-colors transition duration-400" style="font-size:14px; padding:10px 60px; margin: 13px 0 0 0;" type="submit">SUBMIT</button>
                 </form>
+                <div id="help-separator-line-l" class="separator-line-l"> </div>
+                <div id="help-separator-line-d" class="separator-line-d"> </div>
              </div>
             <ul></ul>
           </div>
@@ -1190,7 +1192,7 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
-    
+
 <!--
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
