--- a/public/index.html
+++ b/public/index.html
@@ -422,7 +422,7 @@
                 <div class="shadow"></div>
                 <div class="shadow-two"></div>
             </div>
-            <p class="text-3xl opacity-50 font-light">Note Processing Desktop Environment</p>
+            <p class="text-3xl opacity-50 font-thin">Note Processing Desktop Environment</p>
             <div id="help-separator-line-l" class="separator-line-l"> </div>
             <div id="help-separator-line-d" class="separator-line-d"> </div>
             <div>
@@ -431,19 +431,19 @@
                    <div>
                       <label class="form-text-md-2 opacity-40">Name:</label>
                       <div>
-                         <input id="name-form" class="font-form mt-1 px-1 form-text-md font-light" size="38" type="text" name="first_name" placeholder="Enter your name" placeholder="" required="required">
+                         <input id="name-form" class="font-form mt-1 px-1 form-text-md font-light" size="34" type="text" name="first_name" placeholder="Enter your name" placeholder="" required="required">
                       </div>
                    </div>
                    <div class="mt-2">
                       <label class="form-text-md-2 opacity-40 font-light">Email address:</label>
                       <div>
-                         <input id="email-form" class="font-form mt-1 px-1 form-text-md font-light" size="38" type="email" name="email" placeholder="Enter your email" placeholder="" required="required">
+                         <input id="email-form" class="font-form mt-1 px-1 form-text-md font-light" size="34" type="email" name="email" placeholder="Enter your email" placeholder="" required="required">
                       </div>
                    </div>
                    <div class="mt-2">
                       <label class="form-text-md-2 opacity-40 font-light">Your Message:</label>
                       <div>
-                         <textarea id="message-form" class="font-form mt-1 form-text-md px-1 font-light" style="resize: none;" rows="4" cols="62" type="text" name="message" placeholder="Enter your message" required="required"></textarea>
+                         <textarea id="message-form" class="font-form mt-1 form-text-md px-1 font-light" style="resize: none;" rows="4" cols="50" type="text" name="message" placeholder="Enter your message" required="required"></textarea>
                       </div>
                    </div>
                    <input type="hidden" name="utf8" value="✓">
