Update Feedback Form Layout

--- a/public/index.html
+++ b/public/index.html
@@ -410,7 +410,7 @@
         </div>
         <div id="feedbackscreen-txt" class="cursor-default flex flex-row px-1 py-3">
           <div class="flex-col">
-            <h1 class="text-4xl opacity-50"> Welcome to <b class="opacity-90">CorkPad</b></h1>
+            <h1 class="help-header-text-1 opacity-50"> Welcome to <b class="opacity-90">CorkPad</b></h1>
             <div class="bouncing-text">
                 <div class="b">v</div>
                 <div class="o">.</div>
@@ -422,7 +422,7 @@
                 <div class="shadow"></div>
                 <div class="shadow-two"></div>
             </div>
-            <p class="text-3xl opacity-50 font-thin">Note Processing Desktop Environment</p>
+            <p class="help-header-text-2 opacity-50 font-thin">Note Processing Desktop Environment</p>
             <div id="help-separator-line-l" class="separator-line-l"> </div>
             <div id="help-separator-line-d" class="separator-line-d"> </div>
             <div>
