--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,8 @@
                         <a id="solid-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>  
                     </a> 
                     <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
-                        <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Gray</button> </li> 
-                        <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Black</button> </li>
+                        <li class=""> <buton id="gray-g-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Gray</button> </li> 
+                        <li class=""> <buton id="dark-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Dark</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">White</button> </li>
                         <li class=""> <buton id="woodgrain-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sky</button> </li>
                         <li class=""> <buton id="tiles-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sunrise</button> </li>    
@@ -1194,7 +1194,6 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
-
 <!--
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
