--- a/public/index.html
+++ b/public/index.html
@@ -94,17 +94,13 @@
                     <p class="inline-block ml-1 float-right"> ❯ </p>                   
                 </a> 
                 <ul class="dropdown-content absolute hidden text-gray-700 pl-95 ml-24 -mt-10 cursor-pointer">
-                    <ul class="dropdown-content absolute hidden text-gray-700 margl-d cursor-pointer">
-                        <li class=""> <buton id="bright-theme" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-8 block whitespace-no-wrap">Light</button> </li> 
-                        <li class=""> <buton id="+dark-theme" type="button" class="rounded-br bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Dark</button> </li>
-                    </ul>
                 </li>
 
                 <li class="dropdown">
                     <a id="material-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j rounded-tr block whitespace-no-wrap cursor-pointer">Material
                         <a id="material-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>            
                     </a> 
-                    <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
+                    <ul class="dropdown-content absolute hidden text-gray-700 margl-n cursor-pointer">
                         <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Cork</button> </li> 
                         <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hove r:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Wood</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Metal</button> </li>
@@ -120,7 +116,7 @@
                     <a id="solid-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j block whitespace-no-wrap cursor-pointer">Gradient
                         <a id="solid-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>  
                     </a> 
-                    <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
+                    <ul class="dropdown-content absolute hidden text-gray-700 margl-n cursor-pointer">
                         <li class=""> <buton id="gray-g-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Gray</button> </li> 
                         <li class=""> <buton id="dark-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Dark</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">White</button> </li>
@@ -136,7 +132,7 @@
                     <a id="video-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j block whitespace-no-wrap cursor-pointer">Videos
                         <a id="video-dropdown-theme-a" class="inline-block  mx-5 -my-8  float-right"> ❯ </a>                  
                     </a> 
-                    <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
+                    <ul class="dropdown-content absolute hidden text-gray-700 margl-n cursor-pointer">
                         <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Cork</button> </li> 
                         <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Wood</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Metal</button> </li>
@@ -152,7 +148,7 @@
                     <a id="custom-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j rounded-b block whitespace-no-wrap cursor-pointer">Custom
                         <a id="custom-dropdown-theme-a" class="inline-block  mx-5 -my-8  float-right"> ❯ </a>                  
                     </a> 
-                    <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
+                    <ul class="dropdown-content absolute hidden text-gray-700 margl-n cursor-pointer">
                         <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Cork</button> </li> 
                         <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Wood</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Metal</button> </li>
@@ -167,11 +163,29 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a id="font-dropdown-theme" class="bg-gray-main hover:bg-gray-300 py-2 px-85 block whitespace-no-wrap cursor-pointer rounded-b text-center">Font    
-                    <p class="inline-block ml-1 float-right"> ❯ </p>                
+                <a id="settings-dropdown-theme" class="bg-gray-main hover:bg-gray-300 py-2 px-85 block rounded-b whitespace-no-wrap cursor-pointer">Notes
+                    <p class="inline-block ml-1 float-right"> ❯ </p>                   
                 </a> 
-                
-                <ul class="dropdown-content absolute hidden text-gray-700 margl-m cursor-pointer">
+                <ul class="dropdown-content absolute hidden text-gray-700 pl-95 ml-24 -mt-10 cursor-pointer">
+                </li>
+
+                <li class="dropdown">
+                    <a id="solid-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j block text-center whitespace-no-wrap rounded-tr cursor-pointer">Style
+                        <a id="solid-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>  
+                    </a> 
+                    <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
+                        <li class=""> <buton id="gray-g-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Classic</button> </li> 
+                        <li class=""> <buton id="dark-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Modern</button> </li>
+                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">S</button> </li>
+                        <li class=""> <buton id="woodgrain-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 rounded-b block whitespace-no-wrap">Sky</button> </li>
+                    </ul>
+                </li>
+
+            <li class="dropdown">
+                <a id="font-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j block text-center whitespace-no-wrap cursor-pointer rounded-b text-center">Font    
+                    <a id="solid-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>              
+                </a> 
+                <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
                     <li class=""> <buton id="arial-btn" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Arial</button> </li> 
                     <li class=""> <buton id="monospace-btn" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Monospace</button> </li>
                     <li class=""> <buton id="handwritten-btn" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Handwriten</button> </li>
