ColorElement update and addition of note styles

--- a/public/index.html
+++ b/public/index.html
@@ -174,10 +174,10 @@
                         <a id="solid-dropdown-theme-a" class="inline-block mx-5 -my-8 float-right"> ❯ </a>  
                     </a> 
                     <ul class="dropdown-content absolute hidden text-gray-700 margl-h cursor-pointer">
-                        <li class=""> <buton id="gray-g-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Classic</button> </li> 
-                        <li class=""> <buton id="dark-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Modern</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">S</button> </li>
-                        <li class=""> <buton id="woodgrain-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 rounded-b block whitespace-no-wrap">Sky</button> </li>
+                        <li class=""> <buton id="classic-notestyle-btn" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Classic</button> </li> 
+                        <li class=""> <buton id="modern-notestyle-btn" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Modern</button> </li>
+                        <li class=""> <buton id="glass-notestyle-btn" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Glass</button> </li>
+                        <li class=""> <buton id="neon-notestyle-btn" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 rounded-b block whitespace-no-wrap">Neon</button> </li>
                     </ul>
                 </li>
 
@@ -1198,7 +1198,7 @@
 
 
 
-
+<!--
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/dragElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/statusElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
@@ -1208,7 +1208,8 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
-<!--
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/notestyleElement.js"></script> 
+-->
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
     <script src="/js/dragElement.js"></script>
@@ -1218,7 +1219,8 @@
     <script src="/js/theme.js"></script>  
     <script src="/js/theme-bright.js"></script>  
     <script src="/js/fontElement.js"></script>  
--->
+    <script src="/js/notestyleElement.js"></script>  
+
 
 </body>
 
