--- a/public/index.html
+++ b/public/index.html
@@ -119,16 +119,18 @@
                     <ul class="dropdown-content absolute hidden text-gray-700 margl-n cursor-pointer">
                         <li class=""> <buton id="gray-g-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Gray</button> </li> 
                         <li class=""> <buton id="dark-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Dark</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">White</button> </li>
-                        <li class=""> <buton id="woodgrain-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sky</button> </li>
-                        <li class=""> <buton id="tiles-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sunrise</button> </li>    
-                        <li class=""> <buton id="brick-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Multicolor</button> </li>
-                        <li class=""> <buton id="grass-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Rainbow</button> </li>
-                        <li class=""> <buton id="chipboard-bg" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">ChipBoard</button> </li>   
+                        <li class=""> <buton id="white-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">White</button> </li>
+                        <li class=""> <buton id="sky-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sky</button> </li>
+                        <li class=""> <buton id="sunrise-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Sunrise</button> </li>    
+                        <li class=""> <buton id="multicolor-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Multicolor</button> </li>
+                        <li class=""> <buton id="rainbow-g-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Rainbow</button> </li>
                     </ul>
                 </li>
 
-                <li class="dropdown">
+                <li class="dropdownLOCK">
+                    <svg id="lock-videos-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-lock-fill float-left mx-2 my-3" viewBox="0 0 16 16">
+                        <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
+                    </svg>
                     <a id="video-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j block whitespace-no-wrap cursor-pointer">Videos
                         <a id="video-dropdown-theme-a" class="inline-block  mx-5 -my-8  float-right"> ❯ </a>                  
                     </a> 
@@ -144,7 +146,10 @@
                     </ul>
                 </li>
 
-                <li class="dropdown">
+                <li class="dropdownLOCK">
+                    <svg id="lock-custom-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="currentColor" class="bi bi-lock-fill float-left mx-2 my-3" viewBox="0 0 16 16">
+                        <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
+                    </svg>
                     <a id="custom-dropdown-theme" class="bg-gray-main hover:bg-gray-300 margl-j rounded-b block whitespace-no-wrap cursor-pointer">Custom
                         <a id="custom-dropdown-theme-a" class="inline-block  mx-5 -my-8  float-right"> ❯ </a>                  
                     </a> 
@@ -350,7 +355,7 @@
                     <div class="n">.</div>
                     <div class="c">2</div>
                     <div class="e">.</div>
-                    <div class="d">0</div>
+                    <div class="d">1</div>
                     <div class="shadow"></div>
                     <div class="shadow-two"></div>
                 </div>
@@ -358,12 +363,16 @@
                 <div id="help-separator-line-l" class="separator-line-l"> </div>
                 <div id="help-separator-line-d" class="separator-line-d"> </div>
 
-            <ul class="mt-3 text-2xl opacity-50 font-light">CorkPad allows you to:</ul> 
-            <p class="text-2xl opacity-50 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do ei usmod tempor incididunt sed do eiusmod tempor incididunt sed do eiusmod tempor incididunt. </p>
-            <li class="text-2xl opacity-50 font-light"> Filters: Allows you to apply predefined. </li>
-            <li class="text-2xl opacity-50 font-light"> Viewport: Camera source display.</li> 
-            <li class="text-2xl opacity-50 font-light"> Capture: Settings for photo capturing. </li>
-            <ul></ul>
+            <ul class="mt-3 text-2xl opacity-50 font-light">CorkPad provides you with multiple tools to boost your productivity and time efficiency. </ul> 
+            <li class="mt-2 text-2xl opacity-50 font-light"> Notes: Scrollable long length texts. </li>
+            <li class="text-2xl opacity-50 font-light"> Media: Custom image (URL).</li> 
+            <li class="text-2xl opacity-50 font-light"> Lists: Checkbox list notes. </li>
+
+            <ul class="mt-3 text-2xl opacity-50 font-light">Fully customizable desktop environment. </ul> 
+            <li class="mt-2 text-2xl opacity-50 font-light"> Theme: Menu and window theme. </li>
+            <li class="text-2xl opacity-50 font-light"> Setting: Background image (or video). </li> 
+            <li class="text-2xl opacity-50 font-light"> Notestyle: Notes, Media and List style. </li>
+
           </div>
           <div class="flex-col flex-shrink-0 help-scene">
             <img src="https://i.postimg.cc/VN3TngSb/postit-bg-img.png" class="" alt="developer desk" style="height: 100%; width: 62%; opacity: 90%;">
@@ -393,18 +402,15 @@
                     <div class="n">.</div>
                     <div class="c">2</div>
                     <div class="e">.</div>
-                    <div class="d">0</div>
+                    <div class="d">1</div>
                     <div class="shadow"></div>
                     <div class="shadow-two"></div>
                 </div>
                 <p class="help-header-text-2 opacity-50 font-thin">Note Processing Desktop Environment</p>
                 <div id="help-separator-line-l" class="separator-line-l"> </div>
                 <div id="help-separator-line-d" class="separator-line-d"> </div>
-                <ul class="mt-3 text-2xl opacity-50 font-light">CorkPad allows you to:</ul> 
-                <p class="text-2xl opacity-50 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do ei usmod tempor incididunt sed do eiusmod tempor incididunt sed do eiusmod tempor incididunt. </p>
-                <li class="text-2xl opacity-50 font-light"> Filters: Allows you to apply predefined. </li>
-                <li class="text-2xl opacity-50 font-light"> Viewport: Camera source display.</li> 
-                <li class="text-2xl opacity-50 font-light"> Capture: Settings for photo capturing. </li>
+                <p class="text-2xl opacity-50 mt-3 font-light">CorkPad is a Note Processing Desktop Enviroment that provides you with multiple tools to boost your productivity and time efficency.  </p>
+
           </div>
           <div class="flex-col flex-shrink-0 help-scene">
             <img src="https://i.postimg.cc/VN3TngSb/postit-bg-img.png" class="" alt="developer desk" style="height: 100%; width: 62%; opacity: 90%;">
@@ -434,7 +440,7 @@
                 <div class="n">.</div>
                 <div class="c">2</div>
                 <div class="e">.</div>
-                <div class="d">0</div>
+                <div class="d">1</div>
                 <div class="shadow"></div>
                 <div class="shadow-two"></div>
             </div>
@@ -1203,10 +1209,10 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/statusElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/counterElement.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/bgElement.js"></script>
+
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/helpscreen.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
+
+
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/notestyleElement.js"></script> 
 
@@ -1215,14 +1221,19 @@
     <script src="/js/colorElement.js"></script>
     <script src="/js/dragElement.js"></script>
     <script src="/js/statusElement.js"></script>
-    <script src="/js/bgElement.js"></script>
+
     <script src="/js/helpscreen.js"></script>   
-    <script src="/js/theme.js"></script>  
-    <script src="/js/theme-bright.js"></script>  
+      <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
+      <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
+      <script src="https://combinatronics.com/yegax/CorkPad/main/js/bgElement.js"></script>
+ 
     <script src="/js/fontElement.js"></script>  
     <script src="/js/notestyleElement.js"></script>  
 -->
 
+<script src="/js/theme.js"></script>
+<script src="/js/theme-bright.js"></script> 
+<script src="/js/bgElement.js"></script>
 </body>
 
 
