--- a/public/index.html
+++ b/public/index.html
@@ -1221,22 +1221,22 @@
 
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
     -->
+    
+    <script type="text/javascript" src="/js/counterElement.js"></script>
 
-    <script src="/js/counterElement.js"></script>
+    <script type="text/javascript" src="/js/dragElement.js"></script>
+    <script type="text/javascript" src="/js/statusElement.js"></script>
+    <script type="text/javascript" src="/js/helpscreen.js"></script>   
 
-    <script src="/js/dragElement.js"></script>
-    <script src="/js/statusElement.js"></script>
-    <script src="/js/helpscreen.js"></script>   
-
-      <script src="/js/theme.js"></script>
-      <script src="/js/theme-bright.js"></script> 
-      <script src="/js/bgElement.js"></script>
+      <script type="text/javascript" src="/js/theme.js"></script>
+      <script type="text/javascript" src="/js/theme-bright.js"></script> 
+      <script type="text/javascript" src="/js/bgElement.js"></script>
  
-    <script src="/js/fontElement.js"></script>  
-    <script src="/js/notestyleElement.js"></script>  
+    <script type="text/javascript" src="/js/fontElement.js"></script>  
+    <script type="text/javascript" src="/js/notestyleElement.js"></script>  
 
 
-<script src="/js/colorElement.js"></script>
+<script type="text/javascript" src="/js/colorElement.js"></script>
 
 
 </body>
